deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-hw4
  namespace: hw4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: angular-hw4
  template:
    metadata:
      labels:
        app: angular-hw4  
    spec:
      containers:
        - name: angular-hw4
          image: angeela/angular-hw4
          imagePullPolicy: Always
          ports:
          - containerPort: 53812
