clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-hw4-service
spec:
  type: ClusterIP
  selector:
    app: angular-hw4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
