service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-hw4
  namespace: hw4
spec:
  type: LoadBalancer
  ports:
  - port: 53812
    # - port: 80
      # targetPort: 53812
  
  selector:
    app: angular-hw4
