ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: angular-hw4-ingress
  namespace: hw4
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: angular-hw4
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: angular-hw4
              servicePort: 80
